--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   </head>
   </body>
   <!--anchore tag --> <a href="https://www.w3schools.com/html/html_links.asp"target="-blank">click here</a>
-     < h1 style="text-align: center ;>CSS first class</h1>
+     < h1 style="text-align: center ;>Caffe mocha</h1>
    <!--imgagetag--> <img src ="image/caffe.jpg"alt=caffe it image">
-     < h2 style="text-align: center ;> Learn css</h2>
+     < h2 style="text-align: center ;> Caffe mocha</h2>
      <p style="margin-left:500px;margin-right:500px;">Most professional writers write three drafts or more. The first draft is often called the “vomit draft” or the “shitty first draft.” Don’t share it with anyone! Your first draft is your chance to explore your story and figure out what it’s about.
 Your second draft isn’t for polishing, although many new writers will try to polish as soon as they can to clean up their embarrassing first draft. Instead, the second draft is meant for major structural changes and for clarifying the plot and characters of your novel or the key ideas of your non-fiction book.
 The third draft is for deep polishing. Now is when everything starts to gel. This is the fun part! But until you write the first two drafts, polishing is probably a waste of your time.
